redesigns issues so buttons are aligned and looks better

--- a/Frontend/src/pages/Issues/IssuePage.css
+++ b/Frontend/src/pages/Issues/IssuePage.css
@@ -13,8 +13,8 @@
     margin: 1rem;
     text-align: center;
     padding: 0.5rem;
-    width: 16%;
-    height: 14rem;
+    width: 20%;
+    height: 15rem;
     box-shadow: 1px 3px 8px 2px #084192;
     position: relative;
 }
@@ -30,6 +30,7 @@
     font-weight: 700;
     background-color: grey;
     text-align: center;
+    margin-top: 0.3rem;
 }
 
 #issuepage-title{
@@ -42,21 +43,30 @@
 .issue-box {
     background-color: rgba(60, 80, 134, 0.179);
     border-radius: 3px;
-    overflow-y: hidden;
+    overflow-x: hidden;
+    overflow-y: scroll;
     width: 100%;
-    height: 50%;
+    height: 55%;
+    word-wrap: break-word;
+    white-space: pre-wrap; 
+}
+
+.issue-box::-webkit-scrollbar {
+    width: 8px; /* Thin scrollbar */
+}
+
+.issue-box::-webkit-scrollbar-thumb {
+    background: rgba(60, 80, 134, 0.5); 
+    border-radius: 10px;
 }
 
 .button {
     position: relative;
-    top: 0.5rem;
-   
+    top: 0.35rem;
+    border: 1px solid grey;
+    border-radius: 3rem;
 }
 
-.button :hover {
-    background-color: rgba(150, 179, 237, 0.833);
-}
-
-.button :active {
+.button:active {
     transform: translateY(2px);
 }
